# url-shortener

./: .gitignore  Makefile  pyproject.toml
core/: .env.example  settings.py  urls.py
shorteners/: admin.py  models.py  urls.py  views.py
shorteners/migrations/: 0001_initial.py
templates/shared/: base.html
templates/shorteners/: shortener_home.html
