[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Chien Chuan Wang <chien@chienchuan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
